# embed_endpoits

./: .envrc  .gitignore  3Embeddings.ipynb  Dockerfile  README.md  pyproject.toml
src/embedding_api/: api.py
src/utils/: payloads.py
